packages/lustre-v6.6.103.3/test/should_fail/type/parametric_node.lus


node toto_n<<node f(a, b: int) returns (x: int); const n : int>>(a: int) 
returns (x: int^n);
var v : int;
let
  v = f(a, 1);
  x =  v ^ n;
tel

node parametric_node = toto_n<<Lustre::iplus, 3.0>>;
--                                           ^^^^ bad type here!
